--- a/style.css
+++ b/style.css
@@ -30,3 +30,21 @@
     font-size: 100px;
     color: rgba(0, 0, 0, 0.418)
 }
+
+.user,
+.repo{
+    padding-block: 5px;
+    padding-inline: 15px;
+    color: white;
+    border-radius: 25px;
+    text-align: center;
+    width: 100px;
+}
+
+.user{
+    background-color: rgb(0, 68, 255);
+}
+
+.repo{
+    background-color: rgb(184, 37, 0);
+}
